--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ table,th,td{
 	
 	<tr>
 	
-	<td><a href="grande"/"1.kirkby.g.jpg"><img src="pequena"/"1.kirkby.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/1.kirkby.g.jpg"><img src="pequena/1.kirkby.p.jpg" width="104" height="142"></a></td>
 	
 	<td><a href="2.teixeira.g.jpg"><img src="2.teixeira.p.jpg" width="104" height="142"></a></td>
 	
