--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@ table,th,td{
 	
 	<td><a href="grande/1.kirkby.g.jpg"><img src="pequena/1.kirkby.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="2.teixeira.g.jpg"><img src="2.teixeira.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/2.teixeira.g.jpg"><img src="pequena/2.teixeira.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="3.pita.g.jpg"><img src="3.pita.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/3.pita.g.jpg"><img src="pequena/3.pita.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="4.mota.g.jpg"><img src="4.mota.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/4.mota.g.jpg"><img src="pequena/4.mota.p.jpg" width="104" height="142"></a></td>
 	
 	</tr>
 	
@@ -69,13 +69,13 @@ table,th,td{
 	
 	<tr>
 	
-	<td><a href="5.Ângelo.g.jpg"><img src="5.Ângelo.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/5.Ângelo.g.jpg"><img src="pequena/5.Ângelo.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="6.bernardo.g.jpg"><img src="6.bernardo.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/6.bernardo.g.jpg"><img src="pequena/6.bernardo.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="7.daniel.g.jpg"><img src="7.daniel.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/7.daniel.g.jpg"><img src="pequena/7.daniel.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="8.figueiredo.g.jpg"><img src="8.figueiredo.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/8.figueiredo.g.jpg"><img src="pequena/8.figueiredo.p.jpg" width="104" height="142"></a></td>
 	
 	</tr>
 	
@@ -96,11 +96,11 @@ table,th,td{
 	
 	<td><a href=><img src="" width="104" height="142"></a></td>
 	
-	<td><a href="10.agulheiro.g.jpg"><img src="10.agulheiro.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/10.agulheiro.g.jpg"><img src="pequena/10.agulheiro.p.jpg" width="104" height="142"></a></td>
 	
 	<td><a href=><img src="" width="104" height="142"></a></td>
 	
-	<td><a href="12.francisco.g.jpg"><img src="12.francisco.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/12.francisco.g.jpg"><img src="pequena/12.francisco.p.jpg" width="104" height="142"></a></td>
 	
 	</tr>
 	
@@ -119,13 +119,13 @@ table,th,td{
 	
 	<tr>
 	
-	<td><a href="13.marques.g.jpg"><img src="13.marques.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/13.marques.g.jpg"><img src="pequena/13.marques.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="14.marcelo.g.jpg"><img src="14.marcelo.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/14.marcelo.g.jpg"><img src="pequena/14.marcelo.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="15.gustavo.g.png"><img src="15.gustavo.p.png" width="104" height="142"></a></td>
+	<td><a href="grande/15.gustavo.g.png"><img src="pequena/15.gustavo.p.png" width="104" height="142"></a></td>
 	
-	<td><a href="16.haojie.g.jpg"><img src="16.haojie.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/16.haojie.g.jpg"><img src="pequena/16.haojie.p.jpg" width="104" height="142"></a></td>
 	
 	</tr>
 	
@@ -142,13 +142,13 @@ table,th,td{
     </tr>
 		<tr>
 	
-	<td><a href="17.fidalgo.g.jpg"><img src="17.fidalgo.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/17.fidalgo.g.jpg"><img src="pequena/17.fidalgo.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="18.goncalves.g.jpg"><img src="18.goncalves.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/18.goncalves.g.jpg"><img src="pequena/18.goncalves.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="19.ze.g.jpg"><img src="19.ze.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/19.ze.g.jpg"><img src="pequena/19.ze.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="20.canossa.g.jpg"><img src="20.canossa.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/20.canossa.g.jpg"><img src="pequena/20.canossa.p.jpg" width="104" height="142"></a></td>
 	
 	</tr>
 	
@@ -168,11 +168,11 @@ table,th,td{
 	
 	<td><a href=><img src="" width="104" height="142"></a></td>
 	
-	<td><a href="22.manuel.g.png"><img src="22.manuel.p.png" width="104" height="142"></a></td>
+	<td><a href="grande/22.manuel.g.png"><img src="pequena/22.manuel.p.png" width="104" height="142"></a></td>
 	
-	<td><a href="23.mariana.g.jpg"><img src="23.mariana.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/23.mariana.g.jpg"><img src="pequena/23.mariana.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="24.miguel.g.jpg"><img src="24.miguel.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/24.miguel.g.jpg"><img src="pequena/24.miguel.p.jpg" width="104" height="142"></a></td>
 	
 	</tr>
 	
@@ -189,13 +189,13 @@ table,th,td{
     </tr>
 		<tr>
 	
-	<td><a href="25.rodrigo.g.jpg"><img src="25.rodrigo.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/25.rodrigo.g.jpg"><img src="pequena/25.rodrigo.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="26.tiago.g.jpg"><img src="26.tiago.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/26.tiago.g.jpg"><img src="pequena/26.tiago.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="27.tomas.g.jpg"><img src="27.tomas.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/27.tomas.g.jpg"><img src="pequena/27.tomas.p.jpg" width="104" height="142"></a></td>
 	
-	<td><a href="28.oliveira.g.jpg"><img src="28.oliveira.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/28.oliveira.g.jpg"><img src="pequena/28.oliveira.p.jpg" width="104" height="142"></a></td>
 	
 	</tr>
 	
@@ -213,7 +213,7 @@ table,th,td{
     </tr>
 	<tr>
 	
-	<td><a href="29.vasco.g.jpg"><img src="29.vasco.p.jpg" width="104" height="142"></a></td>
+	<td><a href="grande/29.vasco.g.jpg"><img src="pequena/29.vasco.p.jpg" width="104" height="142"></a></td>
 	
 	<td><img src="" width="104" height="142"></td>
 	
