--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ table,th,td{
 	font-size:70px;
 	} 
 	body {
-        background-color: #C5DBE7;
+        background-color: #F7C59F;
 	margin: 0;
 	width: 100%;
 	height: 100%;
