--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@ table,th,td{
     border-collapse: collapse;	
 	table-layout: fixed;
 	width: 95%;
+	background-color: #CCF5E8;
 	} 
 	.center{
 	text-align: center;
 	font-size:70px;
 	} 
 	body {
-        background-color: #F7C59F;
+        background-color: #28CC98;
 	margin: 0;
 	width: 100%;
 	height: 100%;
